--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 
 .idea
 .vscode
+ProjectsGroup.Mvc/bin
+ProjectsGroup.Mvc/obj
+ProjectsGroup.Mvc/wwwroot/lib/bootstrap/dist
+ProjectsGroup.Mvc/wwwroot/lib/jquery/dist/
+ProjectsGroup.Mvc/wwwroot/lib/jquery-validation/dist
 .idea/.idea.ProjectsGroup/
