initial commit form ProjectsGroup.Mvc

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ProjectsGroup.Mvc/wwwroot/lib/bootstrap/dist
 ProjectsGroup.Mvc/wwwroot/lib/jquery/dist/
 ProjectsGroup.Mvc/wwwroot/lib/jquery-validation/dist
 .idea/.idea.ProjectsGroup/
+.idea/.idea.ProjectsGroup/.idea/
