--- a/ProjectsGroup.Mvc/appsettings.json
+++ b/ProjectsGroup.Mvc/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ApplicationIdentityConnection": "DataSource=identity.db",
+    "ApplicationConnection": "DataSource=app.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
