initial commit form ProjectsGroup.Application

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ ProjectsGroup.Domain/obj
 ProjectsGroup.Domain/bin
 ProjectsGroup.Infra.Data/obj
 ProjectsGroup.Infra.Data/bin
+ProjectsGroup.Application/bin
+ProjectsGroup.Application/obj
